version/0.2/_sources/examples/index.rst.txt
:orphan:

.. _ref_example_gallery:

Examples
========
End-to-end examples show how you can use PyOptiSLang. If PyOptiSLang is installed
on your machine, you can download these examples as Python files or Jupyter
notebooks and run them locally.

.. note::
    Some examples require additional Python packages.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Evaluate designs
----------------

These examples demonstrate how to evaluate designs.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates the evaluation of designs.">

.. only:: html

  .. image:: /examples/evaluate_design/images/thumb/sphx_glr_01_ten_bar_truss_thumb.png
    :alt:

  :ref:`sphx_glr_examples_evaluate_design_01_ten_bar_truss.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ten bar truss</div>
    </div>


.. raw:: html

    </div>

Run Python scripts
------------------

These examples demonstrate how to run Python scripts.

.. note::
   
   For more information on the Python files for these examples,
   see the Python files in the corresponding optiSLang tutorials.




.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to to create an ARSM ten bar truss flow in batch mode.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_01_ten_bar_truss_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_01_ten_bar_truss.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Ten bar truss</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and run a robustness flow for an oscillator.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_02_1_oscillator_robustness_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_02_1_oscillator_robustness.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator robustness</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and run parametric system for an oscillator.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_02_2_oscillator_python_system_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_02_2_oscillator_python_system.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator parametric system</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and run a direct optimization.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_02_3_oscillator_optimization_on_EA_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_02_3_oscillator_optimization_on_EA.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator optimization using EA flow</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create an optimization on MOP flow.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_02_4_oscillator_MOP_sensitivity_and_optimization_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_02_4_oscillator_MOP_sensitivity_and_optimization.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator sensitivity and optimization on MOP</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and solver chains using different solver.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_02_5_oscillator_calibration_systems_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_02_5_oscillator_calibration_systems.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillator calibration systems</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a basic text-based solver chain.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_03_etk_abaqus_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_03_etk_abaqus.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ETK Abaqus</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create workflow components and configure them.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_04_python_node_and_help_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_04_python_node_and_help.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Python node and help</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and configure optimizer systems.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_05_optimizer_settings_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_05_optimizer_settings.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Optimizer settings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create and configure sensitivity systems.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_06_sensitivity_settings_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_06_sensitivity_settings.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sensitivity settings</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a simple calculator flow.">

.. only:: html

  .. image:: /examples/run_python_script/images/thumb/sphx_glr_07_simple_calculator_thumb.png
    :alt:

  :ref:`sphx_glr_examples_run_python_script_07_simple_calculator.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple calculator</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /examples/evaluate_design/index.rst
   /examples/run_python_script/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
